tests/baselines/reference/library-reference-15.errors.txt
error TS2304: Cannot find name 'jquery'.
tests/cases/conformance/references/a/b/consumer.ts(1,1): error TS2304: Cannot find name '$'.


!!! error TS2304: Cannot find name 'jquery'.
==== tests/cases/conformance/references/a/b/consumer.ts (1 errors) ====
    $.foo();
    ~
!!! error TS2304: Cannot find name '$'.
    
==== tests/cases/conformance/references/a/types/jquery/index.d.ts (0 errors) ====
    
    declare var $: { foo(): void };
    
    